--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=schedule
 
 spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+jwt.secret.key = ${JWT_SECRET_KEY}
+jwt.expiration = ${JWT_EXPIRATION}
